testing to see if we can just put this file in the same package space as MS plugins

--- a/plugin.xml
+++ b/plugin.xml
@@ -29,7 +29,7 @@
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="AppCenterDistribute">
                 <param name="onload" value="true" />
-                <param name="android-package" value="com.gmrmarketing.cordova.AppCenterDistributePlugin"/>
+                <param name="android-package" value="com.microsoft.azure.mobile.cordova.AppCenterDistributePlugin"/>
             </feature>
         </config-file>
 
@@ -40,7 +40,7 @@
 
         <framework src="com.microsoft.appcenter:appcenter-distribute:2.3.0" />
 
-        <source-file src="src/android/AppCenterDistributePlugin.java" target-dir="src/com/gmrmarketing/cordova" />
+        <source-file src="src/android/AppCenterDistributePlugin.java" target-dir="src/com/microsoft/azure/mobile/cordova" />
         <!-- <source-file src="src/android/CordovaCrashListener.java" target-dir="src/com/microsoft/azure/mobile/cordova" /> -->
         <!-- <source-file src="src/android/CrashesUtils.java" target-dir="src/com/microsoft/azure/mobile/cordova" /> -->
     </platform>
