--- a/plugin.xml
+++ b/plugin.xml
@@ -57,8 +57,13 @@
 
         <config-file parent="CFBundleURLTypes" platform="ios" target="*-Info.plist">
             <array>
-  		        <string>appcenter-$APP_SECRET</string>
-  	        </array>
+                <dict>
+                    <key>CFBundleURLSchemes</key>
+                    <array>
+                        <string>appcenter-$APP_SECRET</string>
+                    </array>
+                </dict>
+            </array>
         </config-file>
 
         <header-file src="src/ios/AppCenterDistributePlugin.h" />
