--- a/plugin.xml
+++ b/plugin.xml
@@ -19,7 +19,7 @@
     <engine name="cordova" version=">=6.4.0" />
     <engine name="cordova-ios" version=">=4.3.0" />
 
-    <dependency id="cordova-plugin-appcenter-shared" version="0.4.1"/>
+    <dependency id="cordova-plugin-appcenter-shared" version="0.5.0"/>
 
     <js-module name="Distribute" src="www/Distribute.js">
         <clobbers target="AppCenter.Distribute" />
@@ -38,7 +38,7 @@
             <uses-permission android:name="android.permission.INTERNET" />
         </config-file>
 
-        <framework src="com.microsoft.appcenter:appcenter-distribute:2.3.0" />
+        <framework src="com.microsoft.appcenter:appcenter-distribute:2.5.0" />
 
         <source-file src="src/android/AppCenterDistributePlugin.java" target-dir="src/com/microsoft/azure/mobile/cordova" />
         <!-- <source-file src="src/android/CordovaCrashListener.java" target-dir="src/com/microsoft/azure/mobile/cordova" /> -->
@@ -68,5 +68,16 @@
 
         <header-file src="src/ios/AppCenterDistributePlugin.h" />
         <source-file src="src/ios/AppCenterDistributePlugin.m" />
+
+        <podspec>
+            <config>
+                <source url="https://github.com/CocoaPods/Specs.git"/>
+            </config>
+            <pods use-frameworks="true">
+                <pod name="AppCenter/Crashes" spec="~> 2.5.0" />
+            </pods>
+        </podspec>
+
+        <framework src="AppCenter" type="podspec" spec="~> 2.5.0" />
     </platform>
 </plugin>
